Using Integer.valueof() to create an object type Integer