@@ -9,11 +9,14 @@ public class TestRepasoArray {
 		
 		int numero=7;
 		//esta forma ya no se usa mas desde Java9
-		Integer numero2=new Integer(8);
+		
+		//WRAPPER
+		//Integer numero2=new Integer(8);
+		Integer numero2=Integer.valueOf(8); //metodo actualizado para asignar valor
 		//lista sin <> generics
 		List<Integer> lista=new ArrayList<Integer>();
 		//primitivo != object
-		lista.add(numero);
+		lista.add(numero);//auto boxing
 		lista.add(numero2);
 		System.out.println(lista.get(0));
 		System.out.println(lista.get(1));
